<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".tela_cadastro">


    <TextView
        android:id="@+id/titulo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/container_cadastro"
        style="@style/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_cadastro"
       />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/editText"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/container_cadastro"/>

    <EditText
        android:id="@+id/edit_email_cdt"
        style="@style/editText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableRight="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"/>

    <EditText
        android:id="@+id/edit_senha_cdt"
        style="@style/editText"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email_cdt"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        style="@style/button"
        android:text="Cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_cadastro"
        />



</androidx.constraintlayout.widget.ConstraintLayout>